part2/2.02/todo/backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      nodeSelector:
        project: todo
      containers:
        - name: todo-backend
          image: pedrocoelhodr/todo-app:backend-1.0
          ports:
            - containerPort: 5001
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
