part2/2.02/todo/backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-service
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 5001
      targetPort: 5001
